--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,1 @@
-<nav class="navbar navbar-expanded-lg fixed-top navbar-light">
-  <div class="navbar-brand">
-    <img src="../../../assets/logo.png" width="32px">  
-    Pokémon Let's Go 304
-  </div>
-  <button class="btn btn-primary pull-right">Logout</button>
-</nav>
+<p>home page works</p>
