--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,21 +1,60 @@
 <div class="align-middle">
-  <img class="mx-auto d-block" src="../../../assets/logo.png">
-  <form #loginForm='ngForm' class='form' (ngSubmit)='emitLoginData()' autocomplete="off">
-    <div class='form-group col-4 mx-auto'>
-        <label for='username'>Enter your username, or create one here</label>
+  <img class="mx-auto d-block" src="../../../assets/logo.png" />
+  <form
+    #loginForm="ngForm"
+    class="form"
+    (ngSubmit)="doLogin()"
+    autocomplete="off"
+  >
+    <div class="form-group col-4 mx-auto">
+      <label for="username">Enter your username</label>
       <div class="input-group mb-3 mx-auto">
         <div class="input-group-prepend">
           <span class="input-group-text">
-            <i class="fas fa-globe"></i>
+            <i class="fas fa-user"></i>
           </span>
         </div>
-        <input #usernameInput type="text" name='username' id='username' class="form-control" required [(ngModel)]='loginData.username'
-          placeholder="Username">
+        <input
+          #usernameInput
+          type="text"
+          name="username"
+          id="username"
+          class="form-control"
+          required
+          [(ngModel)]="loginData.username"
+          placeholder="Username"
+        />
+      </div>
+    </div>
+    <div class="form-group col-4 mx-auto">
+      <label for="password">Enter your password</label>
+      <div class="input-group mb-3 mx-auto">
+        <div class="input-group-prepend">
+          <span class="input-group-text">
+            <i class="fas fa-key"></i>
+          </span>
+        </div>
+        <input
+          #usernameInput
+          type="password"
+          name="password"
+          id="password"
+          class="form-control"
+          required
+          [(ngModel)]="loginData.password"
+          placeholder="Password"
+        />
       </div>
     </div>
     <div class="col-4 mx-auto">
-      <button type='submit' [disabled]='loginForm.invalid || loginForm.pristine' class="btn btn-login btn-lg w-100"
-        [ngClass]='{ active: loginForm.valid }'>Sign In</button>
+      <button
+        type="submit"
+        [disabled]="loginForm.invalid || loginForm.pristine"
+        class="btn btn-login btn-lg w-100"
+        [ngClass]="{ active: loginForm.valid }"
+      >
+        Sign In
+      </button>
     </div>
   </form>
 </div>
