Some work on sign up page

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -55,6 +55,7 @@
       >
         Sign In
       </button>
+      <button (click)="createNewAccount()" class="btn btn-signup btn-lg w-100">Sign-up</button>
     </div>
   </form>
 </div>
