--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -45,3 +45,12 @@ button.btn-login {
     background: #E1735C;
   }
 }
+
+button.btn-signup {
+  margin-top: 25px;
+  width: 400px;
+  cursor: pointer;
+  border-radius: 300px;
+  color: white;
+  background: #E1735C;
+}
