Extracted some styles and finished look for signup page

--- a/src/app/components/user-form/user-form.component.scss
+++ b/src/app/components/user-form/user-form.component.scss
@@ -1,4 +1,8 @@
 i.selected {
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: red;
+  -webkit-text-stroke-color: white;
+}
+
+.fa-venus, .fa-mars {
+  color: #E1735C;
 }
