--- a/src/app/pages/user-new-page/user-new-page.component.scss
+++ b/src/app/pages/user-new-page/user-new-page.component.scss
@@ -1,8 +1,13 @@
+.form {
+  margin-top: 45px;
+}
+
 img.starter {
-  height: 10%;
-  width: 10%;
+  height: 20%;
+  width: 20%;
 }
 
 img.selected {
-  border: 2px solid red; 
+  outline: solid;
+  outline-color: #E1735C; 
 }
