navbar and style changes

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,18 @@
 <nav class="navbar navbar-expanded-lg fixed-top navbar-light">
   <div class="navbar-brand">
-    <img src="../../../assets/logo.png" width="32px">  
+    <img src="../../../assets/logo.png" width="32px">
     Pokémon Let's Go 304
   </div>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/home">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/pokedex">Pokedex</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/profile">Profile</a>
+    </li>
+  </ul>
   <button class="btn btn-primary pull-right" (click)="logout()">Logout</button>
 </nav>
