--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,3 +1,13 @@
-<p>
-  admin-page works!
-</p>
+<div class="row">
+  <div class="col-4">
+    <h4>Pokemon</h4>
+    <app-pokemon-form></app-pokemon-form>
+  </div>
+  <div class="col-4">
+    <h4>Edit Entities</h4>
+
+  </div>
+  <div class="col-4">
+    <h4>Delete Entities</h4>
+  </div>
+</div>
