--- a/src/app/pages/user-new-page/user-new-page.component.html
+++ b/src/app/pages/user-new-page/user-new-page.component.html
@@ -32,6 +32,9 @@
             [ngClass]="{ active: signUpForm.valid }">
             Sign-Up
           </button>
+          <button class="btn btn-pokemon active btn-lg w-100" (click)="goBack()">
+            Cancel
+          </button>
         </div>
       </div>
     </div>
