--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,10 +1,13 @@
 nav {
-    border-bottom: 1px solid black;
+  -webkit-box-shadow: 0px 1px 30px #BF8B5C;
+  -moz-box-shadow: 0px 1px 30px #BF8B5C;
+  box-shadow: 0px 1px 30px #BF8B5C;
 }
 
 .navbar-nav {
-    flex-direction: row;
-    .nav-item {
-        margin-right: 4px;
-    }
+  flex-direction: row;
+  .nav-item {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
