--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -3,11 +3,6 @@
     <h4>Pokemon</h4>
     <app-pokemon-form></app-pokemon-form>
   </div>
-  <div class="col-4">
-    <h4>Edit Entities</h4>
-
-  </div>
-  <div class="col-4">
-    <h4>Delete Entities</h4>
-  </div>
+  <div class="col-4"></div>
+  <div class="col-4"></div>
 </div>
