--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -2,7 +2,12 @@
   <div class="col-4">
     <h4>Pokemon</h4>
     <app-pokemon-form></app-pokemon-form>
+    <h4 class="mt-4">Accounts</h4>
+    <app-account-form></app-account-form>
   </div>
-  <div class="col-4"></div>
+  <div class="col-4">
+    <h4>Create Account</h4>
+    <app-account-new-form></app-account-new-form>
+  </div>
   <div class="col-4"></div>
 </div>
