--- a/src/app/components/account-new-form/account-new-form.component.scss
+++ b/src/app/components/account-new-form/account-new-form.component.scss
@@ -6,3 +6,13 @@ i.selected {
 .fa-venus, .fa-mars {
   color: #E1735C;
 }
+
+img.starter {
+  height: 20%;
+  width: 20%;
+}
+
+img.selected {
+  outline: solid;
+  outline-color: #E1735C; 
+}
