--- a/src/app/pages/account-new-page/account-new-page.component.html
+++ b/src/app/pages/account-new-page/account-new-page.component.html
@@ -2,9 +2,28 @@
   <img class="mx-auto d-block" src="../../../assets/logo.png" />
   <div class="row">
     <div class="col-4 mx-auto">
-      <app-account-new-form></app-account-new-form>
+      <form
+        #signUpForm="ngForm"
+        class="form mb-2"
+        (ngSubmit)="doSignUp()"
+        autocomplete="off"
+      >
+        <app-account-new-form
+          [account]="account"
+          [pokemon]="pokemon"
+        ></app-account-new-form>
+      </form>
       <div>
-        <button class="btn btn-pokemon active btn-lg w-100 mb-4" (click)="goBack()">
+        <button
+          type="submit"
+          class="btn btn-pokemon active btn-lg w-100"
+        >
+          Sign-Up
+        </button>
+        <button
+          class="btn btn-pokemon active btn-lg w-100 mb-4"
+          (click)="goBack()"
+        >
           Cancel
         </button>
       </div>
