--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,8 +32,8 @@ nav {
 }
 
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active, .btn-secondary.active, .open>.dropdown-toggle.btn-secondary {
-  background-color: #60401E;
-  border-color: #60401E;
+  background-color: #92622F;
+  border-color: #92622F;
 }
 
 body {
