--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -4,6 +4,43 @@
     <app-pokemon-form></app-pokemon-form>
     <h4 class="mt-4">Accounts</h4>
     <app-account-form></app-account-form>
+    <h4 class="mt-4">Items</h4>
+    <app-item-form></app-item-form>
+    <h4 class="mt-4">Others</h4>
+    <label>Update NPC&apos;s Reward</label>
+    <form #updateRewardForm="ngForm" (ngSubmit)="updateReward()">
+      <div class="row">
+        <div class="col-4">
+          <div class="input-group mb-3">
+            <input
+              #npcIdInput
+              type="text"
+              name="npcId"
+              class="form-control"
+              required
+              [(ngModel)]="otherInfo.npcId"
+              placeholder="NPC ID"
+            />
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="input-group mb-3">
+            <input
+              #newRewardInput
+              type="text"
+              name="newReward"
+              class="form-control"
+              required
+              [(ngModel)]="otherInfo.newReward"
+              placeholder="New Reward"
+            />
+          </div>
+        </div>
+        <div class="col-4">
+          <button type="submit" class="btn btn-secondary">Update</button>
+        </div>
+      </div>
+    </form>
   </div>
   <div class="col-4">
     <h4>Create Account</h4>
