--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -119,7 +119,7 @@
             name="oldAccId"
             class="form-control"
             required
-            [(ngModel)]="oldAccId"
+            [(ngModel)]="editAccount.id"
             placeholder="Account ID"
           />
         </div>
