--- a/src/app/pages/account-new-page/account-new-page.component.scss
+++ b/src/app/pages/account-new-page/account-new-page.component.scss
@@ -1,3 +1,13 @@
 .form {
   margin-top: 45px;
 }
+
+img.starter {
+  height: 20%;
+  width: 20%;
+}
+
+img.selected {
+  outline: solid;
+  outline-color: #E1735C; 
+}
