--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -11,60 +11,8 @@
     <app-map-form></app-map-form>
   </div>
   <div class="col-4">
-    <h4>Create Account</h4>
-    <form
-      #createAccForm="ngForm"
-      class="form mb-2"
-      (ngSubmit)="createAccount()"
-      autocomplete="off"
-    >
-      <app-account-new-form
-        [account]="newAccount"
-        [pokemon]="pokemon"
-      ></app-account-new-form>
-      <div class="form-group">
-        <label for="starter">Choose your starter Pokemon</label><br />
-        <div class="p-2">
-          <img
-            class="starter mr-4"
-            src="../../../assets/pokemon-sprites/Bulbasaur.gif"
-            [class.selected]="pokemon.dexNum === 1"
-            (click)="setStarter(1)"
-          />
-          <img
-            class="starter mr-4"
-            src="../../../assets/pokemon-sprites/Charmander.gif"
-            [class.selected]="pokemon.dexNum === 4"
-            (click)="setStarter(4)"
-          />
-          <img
-            class="starter"
-            src="../../../assets/pokemon-sprites/Squirtle.gif"
-            [class.selected]="pokemon.dexNum === 7"
-            (click)="setStarter(7)"
-          />
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="nickname">Nickname your Pokemon</label>
-        <div class="input-group mb-3 mx-auto">
-          <div class="input-group-prepend">
-            <span class="input-group-text">
-              <i class="fas fa-paw"></i>
-            </span>
-          </div>
-          <input
-            #nicknameInput
-            type="text"
-            name="nickname"
-            id="nickname"
-            class="form-control"
-            required
-            [(ngModel)]="pokemon.nickname"
-            placeholder="Pokemon nickname"
-          />
-        </div>
-      </div>
+    <form #createAccForm="ngForm" class="form mb-2" (ngSubmit)="createAccount()" autocomplete="off">
+      <app-account-new-starter-form [account]="newAccount" [pokemon]="pokemon"></app-account-new-starter-form>
       <div>
         <button type="submit" class="btn btn-secondary">Create</button>
       </div>
@@ -72,30 +20,15 @@
   </div>
   <div class="col-4">
     <h4>Update Account</h4>
-    <form
-      #updateAccForm="ngForm"
-      class="form mb-2"
-      (ngSubmit)="updateAccount()"
-      autocomplete="off"
-    >
+    <form #updateAccForm="ngForm" class="form mb-2" (ngSubmit)="updateAccount()" autocomplete="off">
       <div class="form-group">
         <label for="oldAccId">Account ID of the account to be updated</label>
         <div class="input-group mb-3 mx-auto">
-          <input
-            #oldAccIdInput
-            type="text"
-            name="oldAccId"
-            class="form-control"
-            required
-            [(ngModel)]="editAccount.id"
-            placeholder="Account ID"
-          />
+          <input #oldAccIdInput type="text" name="oldAccId" class="form-control" required [(ngModel)]="editAccount.id"
+            placeholder="Account ID" />
         </div>
       </div>
-      <app-account-new-form
-        [account]="editAccount"
-        [pokemon]="pokemon"
-      ></app-account-new-form>
+      <app-account-new-form [account]="editAccount" [pokemon]="pokemon"></app-account-new-form>
       <div>
         <button type="submit" class="btn btn-secondary">Update</button>
       </div>
