--- a/src/app/components/account-new-form/account-new-form.component.html
+++ b/src/app/components/account-new-form/account-new-form.component.html
@@ -6,15 +6,8 @@
         <i class="fas fa-user"></i>
       </span>
     </div>
-    <input
-      #usernameInput
-      type="text"
-      name="username"
-      class="form-control"
-      required
-      [(ngModel)]="account.username"
-      placeholder="Username"
-    />
+    <input #usernameInput type="text" name="username" class="form-control" required [(ngModel)]="account.username"
+      placeholder="Username" />
   </div>
 </div>
 <div class="form-group">
@@ -25,15 +18,8 @@
         <i class="fas fa-key"></i>
       </span>
     </div>
-    <input
-      #passwordInput
-      type="password"
-      name="password"
-      class="form-control"
-      required
-      [(ngModel)]="account.password"
-      placeholder="Password"
-    />
+    <input #passwordInput type="password" name="password" class="form-control" required [(ngModel)]="account.password"
+      placeholder="Password" />
   </div>
 </div>
 <div class="form-group">
@@ -44,15 +30,8 @@
         <i class="fas fa-key"></i>
       </span>
     </div>
-    <input
-      #confirmPassInput
-      type="password"
-      name="password-confirm"
-      class="form-control"
-      required
-      [(ngModel)]="passwordConfirm"
-      placeholder="Confirm Password"
-    />
+    <input #confirmPassInput type="password" name="password-confirm" class="form-control" required
+      [(ngModel)]="passwordConfirm" placeholder="Confirm Password" />
   </div>
 </div>
 <div class="form-group">
@@ -63,28 +42,12 @@
         <i class="fas fa-gamepad"></i>
       </span>
     </div>
-    <input
-      #charNameInput
-      type="text"
-      name="character-name"
-      class="form-control"
-      required
-      [(ngModel)]="account.characterName"
-      placeholder="Character Name"
-    />
+    <input #charNameInput type="text" name="character-name" class="form-control" required
+      [(ngModel)]="account.characterName" placeholder="Character Name" />
   </div>
 </div>
 <div class="form-group">
   <label for="gender">Gender</label><br />
-  <i
-    class="fas fa-4x fa-mars mr-4"
-    [class.selected]="account.gender === 'Male'"
-    (click)="setGender('Male')"
-  ></i>
-  <i
-    class="fas fa-4x fa-venus"
-    [class.selected]="account.gender === 'Female'"
-    (click)="setGender('Female')"
-  ></i>
+  <i class="fas fa-4x fa-mars mr-4" [class.selected]="account.gender === 'Male'" (click)="setGender('Male')"></i>
+  <i class="fas fa-4x fa-venus" [class.selected]="account.gender === 'Female'" (click)="setGender('Female')"></i>
 </div>
-
