Finished map move

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,29 +1,5 @@
 <div class="row">
   <div class="col-6">
-    <div>
-      <img [src]="currentMapSrc" />
-      You are at
-      {{ currentMapName }}
-    </div>
-    <form #moveRegionForm="ngForm" class="mt-4" (ngSubmit)="moveRegion()">
-      <div class="row">
-        <div class="col-8">
-          <select
-            name="newRegion"
-            class="form-control"
-            [(ngModel)]="mapRegionInfo.newRegion"
-          >
-            <option
-              *ngFor="let mapRegion of mapRegions"
-              [ngValue]="mapRegion.name"
-              >{{ mapRegion.name }}</option
-            >
-          </select>
-        </div>
-        <div class="col-4">
-          <button type="submit" class="btn btn-secondary">Move</button>
-        </div>
-      </div>
-    </form>
+    <app-map-move (newRegion)="setCurrentRegion($event)"></app-map-move>
   </div>
 </div>
