pokemon-center component finished, fixed some styles

--- a/src/app/components/map-move/map-move.component.html
+++ b/src/app/components/map-move/map-move.component.html
@@ -1,26 +1,30 @@
-<div *ngIf="currentMap">
-  <img [src]="currentMapSrc" />
-  You are at
-  {{ currentMap.name }}
-</div>
-<form #moveRegionForm="ngForm" class="mt-4" (ngSubmit)="moveRegion()">
-  <div class="row">
-    <div class="col-8">
-      <select
-        name="newRegion"
-        class="form-control"
-        [(ngModel)]="mapRegionInfo.newRegion"
-      >
-        <option
-          *ngFor="let mapRegion of mapRegions"
-          [ngValue]="mapRegion"
-          [selected]="currentMap?.name === mapRegion.name"
-          >{{ mapRegion.name }}</option
-        >
-      </select>
-    </div>
-    <div class="col-4">
-      <button type="submit" class="btn btn-secondary">Move</button>
-    </div>
+<div class="container">
+  <h4>Your Current Location</h4>
+  <div *ngIf="currentMap">
+    <img [src]="currentMapSrc" />
+    You are at
+    {{ currentMap.name }}
   </div>
-</form>
+  <h5 class="mt-4">Move to a different location</h5>
+  <form #moveRegionForm="ngForm" (ngSubmit)="moveRegion()">
+    <div class="row">
+      <div class="col-8">
+        <select
+          name="newRegion"
+          class="form-control"
+          [(ngModel)]="mapRegionInfo.newRegion"
+        >
+          <option
+            *ngFor="let mapRegion of mapRegions"
+            [ngValue]="mapRegion"
+            [selected]="currentMap?.name === mapRegion.name"
+            >{{ mapRegion.name }}</option
+          >
+        </select>
+      </div>
+      <div class="col-4">
+        <button type="submit" class="btn btn-primary">Move</button>
+      </div>
+    </div>
+  </form>
+</div>
