--- a/src/app/components/pokemon-center/pokemon-center.component.html
+++ b/src/app/components/pokemon-center/pokemon-center.component.html
@@ -1,3 +1,8 @@
-<p>
-  pokemon-center works!
-</p>
+<div class="container">
+  <h4>Pokemon Center</h4>
+  <img class="chansey" src="../../../assets//pokemon-sprites/Chansey.gif" />
+  <div>
+    <label>Heal Your Pokemon</label>
+    <button type="button" class="btn btn-primary ml-4" (click)="healAllPokemon()">Heal</button>
+  </div>
+</div>
