--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,11 @@ nav {
   background-color: #F7DE82;
 }
 
+.btn:disabled, .btn:disabled:hover {
+  background: lightgray;
+  border-color: lightgray;
+}
+
 .btn-pokemon {
   margin-top: 25px;
   width: 400px;
@@ -65,4 +70,21 @@ body {
 .container {
   margin: 1rem 0;
   padding: 0;
+}
+
+.table-container {
+  // padding: 20px 30px 20px 30px;
+  background: #fff;
+
+  table {
+    margin-bottom: 0;
+  }
+
+  thead th {
+    border-top: 0;
+    border-bottom: 1px solid #aeaeae;
+    text-transform: uppercase;
+    font-weight: 500;
+    background: #fff;
+  }
 }
