--- a/src/app/components/pokemart/pokemart.component.html
+++ b/src/app/components/pokemart/pokemart.component.html
@@ -1,3 +1,21 @@
-<p>
-  pokemart works!
-</p>
+<div class="container">
+  <h4>Pokemart</h4>
+  <label>Your balance is {{ currentAccountBalance }}</label>
+  <div class="table-container">
+    <table class="table table-striped table-sm">
+      <thead>
+        <tr>
+          <th width="40%">Item Name</th>
+          <th width="20%">Cost</th>
+          <th width="20%">Quantity</th>
+          <th width="20%"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let saleItem of saleItems" app-sale-item [saleItem]="saleItem" [balance]="currentAccountBalance"
+          (purchase)="purchase($event)">
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
