--- a/src/app/components/catch-pokemon/catch-pokemon.component.html
+++ b/src/app/components/catch-pokemon/catch-pokemon.component.html
@@ -1,3 +1,29 @@
-<p>
-  catch-pokemon works!
-</p>
+<div class="container">
+  <h4>Catch &apos;em All!</h4>
+  <p>These Pokemon appear here!</p>
+  <div class="row">
+    <div class="col-sm-2" *ngFor="let s of species">
+      <img width="100%" [src]="getSpeciesIconSrc(s.name)" />
+    </div>
+  </div>
+  <h4>Select a ball to catch a wild Pokemon</h4>
+  <div class="row mt-2 mb-2">
+      <div class="col-3 ball" [class.selected]="ballToUse === 'Poke Ball'" (click)="setBall('Poke Ball')">
+        <img src="../../../assets/item-sprites/Poke-Ball.png" />
+        Poke Ball x {{ currentItemTypeCounts["Poke Ball"] }}
+      </div>
+      <div class="col-3 ball" [class.selected]="ballToUse === 'Great Ball'" (click)="setBall('Great Ball')">
+        <img src="../../../assets/item-sprites/Great-Ball.png" />
+        Great Ball x {{ currentItemTypeCounts["Great Ball"] }}
+      </div>
+      <div class="col-3 ball" [class.selected]="ballToUse === 'Ultra Ball'" (click)="setBall('Ultra Ball')">
+        <img src="../../../assets/item-sprites/Ultra-Ball.png" />
+        Ultra Ball x {{ currentItemTypeCounts["Ultra Ball"] }}
+      </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button class="btn btn-primary" [disabled]="selectedBall === null" (click)="catchRandom()">Catch Random</button>
+    </div>
+  </div>
+</div>
