--- a/src/app/components/pokemart/pokemart.component.html
+++ b/src/app/components/pokemart/pokemart.component.html
@@ -1,6 +1,5 @@
 <div class="container">
   <h4>Pokemart</h4>
-  <label>Your balance is {{ currentAccountBalance }}</label>
   <div class="table-container">
     <table class="table table-striped table-sm">
       <thead>
@@ -12,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let saleItemType of saleItemTypes" app-sale-item [saleItemType]="saleItemType" [balance]="currentAccountBalance"
+        <tr *ngFor="let saleItemType of saleItemTypes" app-sale-item [saleItemType]="saleItemType" [balance]="currentAccount.balance"
           (purchase)="purchase($event)">
         </tr>
       </tbody>
