Finishing up Battle component and did routing to index js backend

--- a/src/app/components/item-form/item-form.component.html
+++ b/src/app/components/item-form/item-form.component.html
@@ -9,7 +9,7 @@
           name="deleteId"
           class="form-control"
           required
-          [(ngModel)]="itemInfo.deleteId"
+          [(ngModel)]="itemTypeInfo.deleteId"
           placeholder="Item ID"
         />
       </div>
@@ -30,7 +30,7 @@
           name="updateId"
           class="form-control"
           required
-          [(ngModel)]="itemInfo.updateId"
+          [(ngModel)]="itemTypeInfo.updateId"
           placeholder="Item ID"
         />
       </div>
@@ -43,7 +43,7 @@
           name="newCost"
           class="form-control"
           required
-          [(ngModel)]="itemInfo.newCost"
+          [(ngModel)]="itemTypeInfo.newCost"
           placeholder="New Cost"
         />
       </div>
