--- a/src/app/components/battle/battle.component.html
+++ b/src/app/components/battle/battle.component.html
@@ -1,46 +1,18 @@
 <div class="container">
-  <h4>Trainer Battles</h4>
-  <div class="table-container">
-    <table class="table table-striped table-sm">
-      <thead>
-        <tr>
-          <th width="40%">Trainer Name</th>
-          <th width="30%">Reward</th>
-          <th width="30%"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let trainer of currentTrainers">
-          <td>{{ trainer.name }}</td>
-          <td>{{ trainer.reward }}</td>
-          <td>
-            <button class="btn btn-primary" (click)="battleTrainer(trainer)">Battle</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div *ngIf="currentTrainers.length > 0">
+    <app-battle-trainer
+      (newBalance)="setBalance($event)"
+      [currentAccount]="currentAccount"
+      [currentPokemon]="currentPokemon"
+      [currentTrainers]="currentTrainers"
+    ></app-battle-trainer>
   </div>
-  <div *ngIf="gym" class="mt-4">
-    <h4>Gym Leader Battles</h4>
-    <div class="table-container">
-      <table class="table table-striped table-sm">
-        <thead>
-          <tr>
-            <th width="40%">Gym Leader Name</th>
-            <th width="30%">Reward</th>
-            <th width="30%"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let gymLeader of currentGymLeaders">
-            <td>{{ gymLeader.name }}</td>
-            <td>{{ gymLeader.reward }}</td>
-            <td>
-              <button class="btn btn-primary" (click)="battleGymLeader(gymLeader)">Battle</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <div *ngIf="gym && currentGymLeaders.length > 0" class="mt-4">
+    <app-battle-gym-leader
+      (newBalance)="setBalance($event)"
+      [currentAccount]="currentAccount"
+      [currentPokemon]="currentPokemon"
+      [currentGymLeaders]="currentGymLeaders"
+    ></app-battle-gym-leader>
   </div>
 </div>
