Changes to wire up to real backend

--- a/src/app/components/account-form/account-form.component.html
+++ b/src/app/components/account-form/account-form.component.html
@@ -62,8 +62,8 @@
         class="form-control"
         [(ngModel)]="accountInfo.itemTypeId"
       >
-        <option *ngFor="let item of items" [ngValue]="item.id">{{
-          item.name
+        <option *ngFor="let itemType of itemTypes" [ngValue]="itemType.id">{{
+          itemType.type
         }}</option>
       </select>
     </div>
