--- a/src/app/components/pokemart/sale-item/sale-item.component.html
+++ b/src/app/components/pokemart/sale-item/sale-item.component.html
@@ -1,6 +1,6 @@
 <td>
   <img [src]="saleItemSrc">
-  {{ saleItemType.name }}
+  {{ saleItemType.type }}
 </td>
 <td>{{ saleItemType.cost }}</td>
 <td>
