--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -22,5 +22,6 @@
       <a class="nav-link" routerLink="/logs">Logs&amp;Activities</a>
     </li>
   </ul>
-  <button class="btn btn-primary btn-secondary pull-right" [class.btn-primary]="!admin" [class.btn-secondary]="admin" (click)="logout()">Logout</button>
+  <button class="btn btn-primary btn-secondary pull-right" [class.btn-primary]="!admin" [class.btn-secondary]="admin"
+    (click)="logout()">Logout</button>
 </nav>
