Added result for catching pokemon, fixed healing pokemon bug, fixed badgesowned account attribute, profile and account pokemon components done on Profile page

--- a/src/app/components/catch-pokemon/catch-pokemon.component.html
+++ b/src/app/components/catch-pokemon/catch-pokemon.component.html
@@ -23,7 +23,8 @@
   </div>
   <div class="row">
     <div class="col">
-      <button class="btn btn-primary" [disabled]="selectedBall === null" (click)="catchRandom()">Catch Random</button>
+      <button class="btn btn-primary" [disabled]="ballToUse === ''" (click)="catchRandom()">Catch Random</button>
+      <span>{{ result }}</span>
     </div>
   </div>
 </div>
