--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,3 +1,15 @@
-<p>
-  profile-page works!
-</p>
+<div class="row">
+  <div class="col-6">
+    <app-profile [currentAccount]="currentAccount"></app-profile>
+  </div>
+</div>
+<div class="row mt-4">
+  <div class="col">
+    <app-account-pokemon [currentAccount]="currentAccount"></app-account-pokemon>
+  </div>
+</div>
+<div class="row mt-4">
+  <div class="col">
+    
+  </div>
+</div>
