Completed account item component in Profile page

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,7 @@
 <h4>Your Profile</h4>
 <p>Your Username: {{ currentAccount.username }}</p>
 <p>Your Character Name: {{ currentAccount.characterName }}</p>
+<p>Your current Balance is {{ currentAccount.balance }}</p>
 <p>You currently own {{ currentAccount.badgesowned }} / 8 badges.</p>
 <div class="row">
   <div class="col-3">
