--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -10,6 +10,6 @@
 </div>
 <div class="row mt-4">
   <div class="col">
-    
+    <app-account-item [currentAccount]="currentAccount"></app-account-item>
   </div>
 </div>
