Started refactoring HttpClient custom calls to be in services instead of components

--- a/src/app/components/account-form/account-form.component.html
+++ b/src/app/components/account-form/account-form.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 </form>
-<label>Set balance to account</label>
+<!-- <label>Set balance to account</label>
 <form #setBalanceForm="ngForm" (ngSubmit)="setBalance()">
   <div class="row">
     <div class="col-4">
@@ -52,7 +52,7 @@
       <button type="submit" class="btn btn-secondary">Set</button>
     </div>
   </div>
-</form>
+</form> -->
 <label>Add item(s) to account</label>
 <form #addItemForm="ngForm" (ngSubmit)="addItem()">
   <div class="row">
