Changes to Digletts Cave, and sizing for account pokemon component, added README for installation instructions

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="row mt-4">
-  <div class="col">
+  <div class="col-6">
     <app-account-pokemon [currentAccount]="currentAccount"></app-account-pokemon>
   </div>
 </div>
